[project]
name = "voice_agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.3",
    "dotenv>=0.9.9",
    "fastapi>=0.139.0",
    "google-auth>=2.55.1",
    "google-auth-oauthlib>=1.4.0",
    "google-oauth>=1.0.1",
    "langchain>=1.3.11",
    "langchain-core>=1.4.8",
    "langchain-google-community>=5.0.0",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.7",
    "ngrok>=1.4.0",
    "phonenumbers>=9.0.34",
    "pydantic>=2.13.4",
    "resend>=2.32.2",
    "supabase>=2.31.0",
    "twilio>=9.10.9",
    "uvicorn>=0.50.2",
]
